fix alignment temporary

--- a/src/components/adminContent/adminList/adminList.css
+++ b/src/components/adminContent/adminList/adminList.css
@@ -5,14 +5,14 @@
 
 .adminContainer{
     position: absolute;
-    /* width: 900px; */
-    padding: 100px 200px;
+    width: 900px;
+    padding: 90px 200px;
     width: 80%;
 }
 .titleAdmin{
     position: relative;
     left:115px;
-    width: 190px;;
+    width: 100%;
     padding: 10px;
 }
 
@@ -23,10 +23,10 @@
 
 .hr{
     position: relative;
-    left:115px;
+    /* left:0; */
     border-color: #910000;
     border-style:solid;
-    width:750px;
+    width:100%;
     /* color: red; */
     line-height: 10px;
 }
